<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/costum"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="31dp">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="125dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/logobit"
                    android:layout_width="@dimen/size_logo"
                    android:layout_height="@dimen/size_logo"
                    android:src="@drawable/logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/AppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="-100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white" />

            <TextView
                style="@style/styleOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:text="@string/welcome" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:background="@color/input"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:id="@+id/iconuser"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_user" />

                <EditText
                    android:id="@+id/textuser"
                    style="@style/styleTow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toRightOf="@id/iconuser"
                    android:hint="@string/User"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#4C4C4C"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:background="@color/input"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/iconpass"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_password" />

                <EditText
                    style="@style/styleTow"
                    android:id="@+id/textpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toRightOf="@id/iconpass"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#4C4C4C" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp">
                <TextView
                    android:id="@+id/nextpage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getpass"
                    android:textSize="18dp"
                    android:layout_marginTop="12dp"
                    android:textColor="#272727"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btloginhome"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="LOGIN"
                    app:cornerRadius="0dp"
                    android:textColor="@color/black"
                    android:backgroundTint="#DCDCDC"/>
            </RelativeLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="80px"
                android:textColor="#555454"
                android:text="-or-" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/logingoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/login">
            <ImageView
                android:id="@+id/google"
                android:layout_width="@dimen/size_google"
                android:layout_height="@dimen/size_google"
                android:src="@drawable/googlegrey"/>
            <TextView
                android:background="#C8C6C6"
                android:layout_toRightOf="@id/google"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="@dimen/size_google"
                android:text="@string/logingoogle"
                android:textStyle="bold"
                android:textColor="#3E3C3C"
                android:textSize="20dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_below="@id/logingoogle"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp">
            <TextView
                android:id="@+id/dont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginsignup"
                android:textSize="45px"
                android:textColor="@color/black"
                android:gravity="center"/>

            <Button
                android:id="@+id/btsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dont"
                android:layout_centerInParent="true"
                android:backgroundTint="#005A5757"
                android:text="SIGN UP"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                app:cornerRadius="0dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup">
            <TextView
                android:id="@+id/made"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Made By"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_below="@id/made"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:gravity="center"/>
        </RelativeLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>