<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/costum"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="31dp">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="125dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:layout_width="@dimen/size_logo"
                    android:layout_height="@dimen/size_logo"
                    android:src="@drawable/logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/AppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="-100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white" />

            <TextView
                style="@style/styleOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:text="@string/welcome" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:background="@color/input"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:id="@+id/iconuser"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_user" />

                <EditText
                    android:id="@+id/textuser"
                    style="@style/styleTow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toRightOf="@id/iconuser"
                    android:hint="@string/User"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#4C4C4C"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:background="@color/input"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/iconmail"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/mail" />

                <EditText
                    android:id="@+id/textmail"
                    style="@style/styleTow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toRightOf="@id/iconmail"
                    android:hint="@string/Mail"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#4C4C4C" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:background="@color/input"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/iconpass"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_password" />

                <EditText
                    android:id="@+id/textpassword"
                    style="@style/styleTow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toRightOf="@id/iconpass"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#4C4C4C" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btregister"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="REGISTER"
                    app:cornerRadius="0dp"
                    android:textColor="@color/black"
                    android:backgroundTint="#DCDCDC"/>
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_below="@id/login"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp">
            <TextView
                android:id="@+id/have"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textSize="45px"
                android:textColor="@color/black"
                android:gravity="center"/>

            <Button
                android:id="@+id/btlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/have"
                android:layout_centerInParent="true"
                android:backgroundTint="#005A5757"
                android:text="LOGIN"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                app:cornerRadius="0dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup">
            <TextView
                android:id="@+id/made"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Made By"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_below="@id/made"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:gravity="center"/>
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>